--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "testing simple api",
   "main": "script.js",
   "scripts": {
+    "start": "node script.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
